2005-02-27  Pierre Chifflier  <pollux@wzdftpd.net>

	* feature: perl: chmod, chgrp, chown
	* feature: perl warnings and errors are logged to a file
	* feature: tcl: chmod, chgrp, chown
	* bugfix: site_cmd not working
	* bugfix: remove context after client exit

2005-02-21  Pierre Chifflier  <pollux@wzdftpd.net>

	* --- cvs commit TAG: rel-0-5-0

2005-02-20  Pierre Chifflier  <pollux@wzdftpd.net>

	* bugfix: misc problems with str_dup, str_copy
	* feature: vars_group new (new group creation)

2005-02-13  Pierre Chifflier  <pollux@wzdftpd.net>

	* bugfix: some small memory leaks and potential buffer overflows

2005-02-11  Roman Bogorodskiy <bogorodskiy@inbox.ru>
	
	* feature: added HELP command

2005-02-08  Pierre Chifflier  <pollux@wzdftpd.net>

	* bugfix: server does not change uid when running as root
	* bugfix: added several mutexes to avoid race conditions
	* feature: CHPASS command changed to allow changing own password
	* feature: new directive 'server_gid'

2005-02-04  Pierre Chifflier  <pollux@cpe.fr>

	* feature: new commands SSCN and CPSV, used for secure FXP
	* feature: errors in TCL module are catched and put in a log file
	* bugfix: file descriptors not closed on ident connections
	* bugfix: file descriptors not closed in win32 version
	* bugfix: dynamic_ip not working
	* bugfix: FXP not working when using PORT in clear mode

2005-01-28  Pierre Chifflier  <pollux@cpe.fr>

	* bugfix: disable file cache code, it is broken (not thread-safe)
	* bugfix: removed some calls to gethostbyname (not thread-safe)

2005-01-25  Pierre Chifflier  <pollux@cpe.fr>

	* feature: added event DELE when a file is deleted

2005-01-18  Pierre Chifflier  <pollux@cpe.fr>

	* bugfix: problems with > 2GB files on 32-bit arches (closes: #0024)

2005-01-14  Pierre Chifflier  <pollux@cpe.fr>

	* feature: use statvfs instead of statfs if detected
	* feature: option "reject_unknown_user" to reject users after USER command
	* feature: the main part (server+lib) now compiles on solaris